2006-05-01  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Pass a source-version to gt_JAVACOMP. Move gt_JAVAEXEC
	call before the gt_JAVACOMP call.

2006-04-23  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_HEADER_UNISTD.

2006-04-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (gettextsrc_SCRIPTS): Remove mkinstalldirs.

2006-03-11  Bruno Haible  <bruno@clisp.org>

	* configure.ac (MSGMERGE_LIBM): New variable. Test for presence of
	ceil() and sqrt().

2005-11-23  Bruno Haible  <bruno@clisp.org>

	Cygwin portability.
	* configure.ac: Invoke gl_WOE32_DLL.

2005-11-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc): Treat HAVE_FWPRINTF like
	HAVE_WPRINTF. Needed since 2003-09-17.
	Reported by Svante Seleborg <svante@axantum.com>.

2005-08-16  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Remove gl_STRCASE invocation.

2005-09-20  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke BISON_I18N.

2005-08-23  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_BYTESWAP. Define ENDIANNESS.

2005-08-13  Bruno Haible  <bruno@clisp.org>

	New configure options --disable-java, --disable-native-java.
	* configure.ac: Invoke gt_JAVA_CHOICE.
	(BUILDJAVAEXE, BUILDJAVA): Use it.

2005-08-11  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Accept --without-emacs option.

2005-08-03  Bruno Haible  <bruno@clisp.org>

	* configure.ac (intl/Makefile): Remove the VPATH line.
	Reported by Jason Keltz <jas@cs.yorku.ca>.

2005-07-26  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Move the AM_GNU_GETTEXT invocation early, since it
	modifies CPPFLAGS.

2005-07-05  Bruno Haible  <bruno@clisp.org>

	* mingw: New directory.
	* configure.ac (LTNOUNDEF): New macro.
	(MINGW): New conditional.
	(DLL_VARIABLE): Define also as nonempty when building shared libraries
	with mingw.

2005-05-01  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Call gt_CSHARPEXEC with parameters.

2005-03-20  Bruno Haible  <bruno@clisp.org>
