@@ -1,3 +1,7 @@
+2006-04-30  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Invoke gl_STDARG_H.
+
 2006-05-01  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Pass a source-version to gt_JAVACOMP. Move gt_JAVAEXEC
